Extending the templates to include an App layer and a Page layer Added favicon.ico to src folder test if favicon is copied over in build script

--- a/templates/partials/head.njk
+++ b/templates/partials/head.njk
@@ -1,4 +1,22 @@
-<title>mfb-intro-blog</title>
 
-<!-- CSS files -->
+
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<title>mfb-intro-blog</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<link rel="manifest" href="site.webmanifest">
+<!-- link rel="apple-touch-icon" href="icon.png" -->
+<!-- Place favicon.ico in the root directory -->
+
+<!-- Base CSS files -->
 <link rel="stylesheet" type="text/css" href="/css/main.css" />
+
+<!-- App CSS files -->
+{% block appCSS %}
+{% endblock appCSS %}
+
+<!-- Page CSS files -->
+{% block pageCSS %}
+{% endblock pageCSS %}
