--- a/templates/pages/index.njk
+++ b/templates/pages/index.njk
@@ -1,8 +1,8 @@
-{% extends '../partials/base.njk' %}
+{% extends '../partials/app.njk' %}
 
 
-{% block body %}
+{% block page %}
 
-	<h1>Hello world!</h1>
+	<h1>Hello page!</h1>
 
-{% endblock body%}
+{% endblock page %}
