--- a/templates/partials/base.njk
+++ b/templates/partials/base.njk
@@ -4,12 +4,16 @@
 	{% include '../partials/head.njk' %}
 </head>
 <body>
-{% block body %}
+	<!--[if lte IE 9]>
+		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+	<![endif]-->
 
-{% endblock body %}
+	<!-- app -->
+	{% block app %}
+	{% endblock app %}
 
-<!-- JS fies -->
-<script src="js/main.js"></script>
+	<!-- JS fies -->
+	{% include '../partials/js.njk' %}
 
 </body>
 </html>
