Adding a global config object and some global vars to all templates to include app titles

--- a/views/partials/app.njk
+++ b/views/partials/app.njk
@@ -1,18 +1,15 @@
 {% extends '../partials/base.njk' %}
 
 <!-- App-specific CSS -->
-{% block appCSS %}
-{% endblock appCSS %}
+{% block appCSS %}{% endblock appCSS %}
 
 <!-- App-specific content -->
 {% block app %}
 	
-	{% block page %}
-		<h1>Hello world!</h1>
-	{% endblock page %}
+	<!-- Page -->
+	{% block page %}{% endblock page %}
 
 {% endblock app %}
 
 <!-- App-specific JS -->
-{% block appJS %}
-{% endblock appJS %}
+{% block appJS %}{% endblock appJS %}
