--- a/views/partials/base.njk
+++ b/views/partials/base.njk
@@ -8,9 +8,8 @@
 		<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
 	<![endif]-->
 
-	<!-- app -->
-	{% block app %}
-	{% endblock app %}
+	<!-- App -->
+	{% block app %}{% endblock app %}
 
 	<!-- JS fies -->
 	{% include '../partials/js.njk' %}
