--- a/views/partials/head.njk
+++ b/views/partials/head.njk
@@ -1,12 +1,12 @@
-
-
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>mfb-intro-blog</title>
+<title>{{page.title}} - {{app.title}}</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<link rel="manifest" href="site.webmanifest">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<!-- link rel="manifest" href="site.webmanifest" -->
 <!-- link rel="apple-touch-icon" href="icon.png" -->
 <!-- Place favicon.ico in the root directory -->
 
@@ -14,9 +14,7 @@
 <link rel="stylesheet" type="text/css" href="/css/main.css" />
 
 <!-- App CSS files -->
-{% block appCSS %}
-{% endblock appCSS %}
+{% block appCSS %}{% endblock appCSS %}
 
 <!-- Page CSS files -->
-{% block pageCSS %}
-{% endblock pageCSS %}
+{% block pageCSS %}{% endblock pageCSS %}
