--- a/views/partials/app.njk
+++ b/views/partials/app.njk
@@ -12,4 +12,6 @@
 {% endblock app %}
 
 <!-- App-specific JS -->
-{% block appJS %}{% endblock appJS %}
+{% block appJS %}
+	<script src="js/app.js"></script>
+{% endblock appJS %}
