--- a/views/pages/index.njk
+++ b/views/pages/index.njk
@@ -2,8 +2,12 @@
 
 {% set page = {title: 'Home'} %}
 
+{% block pageCss %}{% endblock pageCss %}
+
 {% block page %}
 
 	<h1>Hello {{subject}}!</h1>
 
 {% endblock page %}
+
+{% block pageJS %}{% endblock pageJS %}
