fix base.njk error in if statement

--- a/views/partials/base.njk
+++ b/views/partials/base.njk
@@ -23,7 +23,7 @@
 
 	<!-- Analytics -->
 	{{app.live}}
-	{% if app.live === 'production' && app.ga !== '' %}
+	{% if app.live === 'production' and app.ga !== '' %}
 		{% include '../partials/analytics.njk' %}
 	{% endif %}
 	
