--- a/views/partials/base.njk
+++ b/views/partials/base.njk
@@ -22,8 +22,7 @@
 	{% block pageJS %}{% endblock pageJS %}
 
 	<!-- Analytics -->
-	{{app.live}}
-	{% if app.live === 'production' and app.ga !== '' %}
+	{% if app.env === 'production' and app.ga !== '' %}
 		{% include '../partials/analytics.njk' %}
 	{% endif %}
 	
