fix strict MIME issue on CSS

--- a/views/partials/base.njk
+++ b/views/partials/base.njk
@@ -13,7 +13,7 @@
 
 	<!-- Javascript -->
 	<!-- Base JS files -->
-	<script src="js/main.js"></script>
+	<script src="/js/main.js"></script>
 
 	<!-- App JS Files -->
 	{% block appJS %}{% endblock appJS %}
