--- a/views/partials/app.njk
+++ b/views/partials/app.njk
@@ -13,5 +13,5 @@
 
 <!-- App-specific JS -->
 {% block appJS %}
-	<script src="js/app.js"></script>
+	<script src="/js/app.js"></script>
 {% endblock appJS %}
