Correctly update main.css to app.css to reflect the app-nature of the css file

--- a/views/partials/head.njk
+++ b/views/partials/head.njk
@@ -11,7 +11,7 @@
 <!-- Place favicon.ico in the root directory -->
 
 <!-- Base CSS files -->
-<link rel="stylesheet" type="text/css" href="/css/main.css" />
+<link rel="stylesheet" type="text/css" href="/css/app.css" />
 
 <!-- App CSS files -->
 {% block appCSS %}{% endblock appCSS %}
