updating build:sass to work correctly when finding multiple sass files

--- a/views/partials/base.njk
+++ b/views/partials/base.njk
@@ -2,6 +2,14 @@
 <html>
 <head>
 	{% include '../partials/head.njk' %}
+
+	<!-- App CSS files -->
+	{% block appCSS %}
+		<link rel="stylesheet" type="text/css" href="/css/app.css" />
+	{% endblock appCSS %}
+
+	<!-- Page CSS files -->
+	{% block pageCSS %}{% endblock pageCSS %}
 </head>
 <body>
 	<!--[if lte IE 9]>
