Update index with poker-specific welcome message

--- a/views/index.njk
+++ b/views/index.njk
@@ -12,7 +12,7 @@
 <!-- Page HTML content -->
 {% block page %}
 
-	<h1>Hello {{subject}}!</h1>
+	<h1>Welcome to mfb-poker</h1>
 
 {% endblock page %}
 
