--- a/views/app.njk
+++ b/views/app.njk
@@ -12,8 +12,8 @@
 <!-- App-specific CSS -->
 {% block appCSS %}
 	<!-- Google Fonts - Raleway and Open Sans -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:300,400" rel="stylesheet">
-	
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Raleway:200,300" rel="stylesheet">
+
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	
@@ -36,7 +36,7 @@
 						{{ user.nickname }}
 						<img src="{{ user.picture }}" alt="{{ user.nickname }}" class="img-fluid rounded-circle"/>
 					</a>
-					<a href="/logout" id="btn-logout" class="btn btn-sm btn-outline-secondary">Log out</a>
+					<a href="/logout" id="btn-logout" class="btn btn-sm btn-outline-secondary ml-3">Log out</a>
 				{% else %}
 					<a href="/login" id="btn-login" class="btn btn-sm btn-primary">Log in</a>
 				{% endif %}
