Force https, move nunjucks into middleware, and make 404 use a template

--- a/views/index.njk
+++ b/views/index.njk
@@ -20,10 +20,10 @@
 	<table id="tournament-table" class="table table-hover">
 		<thead>
 			<tr>
-				<th>Tournament ID</th>
-				<th>Game type</th>
+				<th>ID</th>
+				<th>Type</th>
 				<th>Format</th>
-				<th>Starting stack</th>
+				<th>Stack</th>
 				<th>Players</th>
 				<th>Status</th>
 			</tr>
